--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Registration form</h1>
-<form action="/" th:object ="${user}" method="POST" enctype="utf8">
+<form action="/register" th:object ="${user}" method="POST" enctype="utf8">
     <div>
         <label>Username:</label>
         <input th:field="*{username}"/>
