Implementation of functionality to collect data from form to json string

--- a/src/main/resources/templates/createQuiz.html
+++ b/src/main/resources/templates/createQuiz.html
@@ -16,15 +16,15 @@
     <div class="form-group dynamic-fields">
       <div class="form-group">
         <label for="quizName">Quiz Name:</label>
-        <input type="text" id="quizName" class="form-control" name="quizName" required>
+        <input type="text" id="quizName" class="form-control" data-name="quizName" required>
       </div>
       <div class="form-group">
         <label for="quizIntroduction">Quiz Introduction:</label>
-        <input type="text" id="quizIntroduction" class="form-control" name="quizIntroduction" required>
+        <input type="text" id="quizIntroduction" class="form-control" data-introduction="quizIntroduction" required>
       </div>
       <div class="form-group">
         <label for="">Duration time(min):</label>
-        <input type="number" min="1" class="form-control" name="durationTime" required>
+        <input type="number" min="1" class="form-control" data-duration="quizDurationTime" required>
       </div>
       <div id="questionsContainer" class="form-data">
 
