Set up api controller Set up ajax create quiz request to API Edit QuestionDTO Edit QuizDTO Create Answer model Create Question model Edit Quiz model Create Answer Repository Create Question Repository Fix QuizHashGeneratorService Create and set up QuizService

--- a/src/main/resources/templates/createQuiz.html
+++ b/src/main/resources/templates/createQuiz.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" th:href="@{/css/bootstrap-grid.css}" >
   <link rel="stylesheet" th:href="@{/css/bootstrap-reboot.css}">
   <link rel="stylesheet" th:href="@{/css/styles.css}">
-
+  <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
   <title>Quiz Creation Form</title>
 </head>
 <body>
