Implement a function to collect quiz result data Create DTO's for processing quiz results Add webfonts

--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -12,23 +12,26 @@
 <body>
 <div class="quiz-container" th:object = "${quiz}">
     <h1 class="text-center mb-4 " th:text = "${quiz.getName()}">Викторина</h1>
-    <form id="quiz-form">
+    <form id="quiz-form" action="" method="POST">
+        <input type="hidden" data-th-name="${_csrf.parameterName}"
+               data-th-value="${_csrf.token}">
         <div th:each="question, questionIndex : ${quiz.getQuestions()}">
             <div class="question-container" th:classappend="${questionIndex.index == 0 ? 'active' : ''}" th:data-question="${questionIndex.index + 1}">
-                <h2 th:text = "${question.getName()}">Вопрос</h2>
+                <h2 class="quiz-name" th:text = "${question.getName()}">Вопрос</h2>
                 <p th:text = "${question.getDescription()}"> Дополнительное описание вопроса, если есть.</p>
                 <div th:each="answer: ${question.getAnswers()}" >
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input"
                                th:id="'q' + ${questionIndex.index + 1} + 'a'"
                                th:name="'q' + ${questionIndex.index + 1} + 'a'"
-                               value="a">
+                               th:value = "${answer.getName()}">
                         <label class="form-check-label" th:text = "${answer.getName()}">Ответ</label>
                     </div>
                 </div>
                 <div class="mt-auto">
                     <button th:if="${questionIndex.index > 0}" type="button" class="btn btn-primary mx-auto" th:onclick="'prevQuestion(' + ${questionIndex.index + 1} + ')'" >Предыдущий вопрос</button>
-                    <button type="button" class="btn btn-primary mx-auto" th:onclick="'nextQuestion(' + ${questionIndex.index + 1} + ')'" >Следующий вопрос</button>
+                    <button th:if="${!questionIndex.last}"type="button" class="btn btn-primary mx-auto" th:onclick="'nextQuestion(' + ${questionIndex.index + 1} + ')'" >Следующий вопрос</button>
+                    <button th:if="${questionIndex.last}" type="submit" class="btn btn-primary mx-auto" id = "saveQuizResult">Завершить викторину</button>
                 </div>
             </div>
         </div>
